@@ -3,6 +3,15 @@ LIST OF CHANGES
  - Deleted two unused methods from npg::model::instrument_annotation,
    annotations_by_instrument_over_default_uptime and
    dates_of_annotations_over_default_uptime
+ - Tracking web server:
+   - Added a new optional parameter 'manufacturer' to methods returning lists
+     of runs and run count - the name of the manufacturer. If this name is
+     undefined in the parameters hash, it defaults to 'Illumina'.
+   - To avoid code repetition, consolidated queries for listing and counting
+     runs in npg::model::run. Previously the same code was repeated in eight
+     different places in three models. In one of the models the code was never
+     called, so was simply deleted.
+   - Simplified the logic of retrieving cached lists and counts of runs.
 
 release 102.1.0 (2025-01-16)
  - Fixed perlbrew installation by installing libdevel-patchperl-perl in
